# aufgabe_3-5

./: .pdm-python  README.md  pyproject.toml  read_data.py
