[project]
name = "aufgabe_3-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "javolmer", email = "jasper.volmer@mci.edu"},
]
dependencies = ["streamlit>=1.12.0"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
